Fix: RBAC issues, booking validation, session control, timetable seeding, UI fixes